1.mar (ws)
      - new media dialog (to add/remove pdf scans for side by side display)
        (audio not implemented)
      - new virtual piano for note input
28.feb (ws)
      - add beaming rules for 12/16 time signature as seen in bach's goldberg variation #11
27.feb (ws)
      - expose more bar line style parameters in edit style:
         - ST_barWidth
         - ST_endBarWidth
         - ST_endBarDistance
         - ST_doubleBarWidth
         - ST_doubleBarDistance
      - use raster when dragging symbols
      - fix dragging a symbol onto a symbol creating a "compound" symbol
        (try dragging a "acc dot" onto an "acc discant")
      - add z-axis to element coordinates
      - add Ctrl+L (edit element) to element context menu
      (db)
      - Use Ctrl+Shift+[Number] for switching voices
      - Standardize naming for text symbols per http://musescore.org/en/node/9515
      - fix #9544: Remove "Create > test" plugin
      - fix #8669: Shortcut menu inconsistent capitalization (etc.)
      - Add a few Alt-keys to menu items
26.feb (ws)
      - regression fix: crash if double click on palette item
      - fix crash in harmony style editor
25.feb (ws)
      - instrument names are selectable again. Also "delete" works again. Edit mode
        is not possible. Right click shows context menu with "Staff Properties".
      (tb)
      - adding Lithuanian (mscore_lt.ts) language
24.feb (ws)
      - rest property changes are applied to all selected rests.
22.feb (ws)
      - build system updates for Clang c++ compiler
21.feb (ws)
      - new drop functions:
            - control + drop key signature drops ks to all staves
            (this functionality should also be added to other element types).
      - new drag functions:
            - control+drag restricts to horizontal movement
            - shift+drag   restricts to vertical movement
      - more functionality for chord style editor: